--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -1,11 +1,15 @@
+// @import url('https://fonts.googleapis.com/css2?family=Antic+Didone&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap');
 
 @import './configs/resets';
 @import './configs/globals';
 
 body {
+	font-family: 'Open Sans', sans-serif;
+
 	@include container;
-	font-family: 'Merriweather', serif;
 }
 
 .the-plan {
@@ -34,7 +38,8 @@ footer {
 
 h1 {
 	font-size: 2rem;
-	font-weight: bold;
+	font-weight: 500;
+	font-family: 'Merriweather', serif;
 }
 
 h2 {
@@ -64,8 +69,10 @@ h6 {
 
 p {
 	margin: 1em 0;
+	font-weight: 300;
+	line-height: 1.5;
 
-	&:last-child {
+	&:nth-child(3) {
 		color: $gold;
 	}
 }
