--- a/src/styles/modules/header.module.scss
+++ b/src/styles/modules/header.module.scss
@@ -1,7 +1,36 @@
+@import '../configs/globals';
+
 .header {
 	> ul {
 		display: flex;
-		align-items: center;
 		gap: 1em;
+		padding: 2em 0;
+
+		> li {
+			> button {
+				cursor: pointer;
+				font-family: 'Cinzel Decorative', serif;
+				font-size: 1rem;
+				letter-spacing: 1px;
+
+				&:hover,
+				&.active {
+					&:after {
+						opacity: 1;
+
+						@include smoothTrans;
+					}
+				}
+
+				&:after {
+					content: '';
+					display: block;
+					width: 100%;
+					height: 1px;
+					background-color: $gold;
+					opacity: 0;
+				}
+			}
+		}
 	}
 }
