added the hero & some styling to main & footer

--- a/src/styles/configs/_globals.scss
+++ b/src/styles/configs/_globals.scss
@@ -1,2 +1,3 @@
-@import '../globals/mixins';
-@import '../globals/colors';
+@import '../customs/mixins';
+@import '../customs/colors';
+@import '../customs/mediaqueries';
