--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -37,9 +37,7 @@ footer {
 	justify-content: center;
 }
 
-section
-// :not(:last-of-type)
-{
+section:not(:last-of-type) {
 	margin-bottom: 2em;
 }
 
@@ -81,9 +79,5 @@ p {
 
 	&:not(:last-child) {
 		margin-bottom: 0;
-	}
-
-	&:nth-child(4) {
-		color: $gold;
 	}
 }
