checking the new hero/intro section

--- a/src/styles/customs/_mixins.scss
+++ b/src/styles/customs/_mixins.scss
@@ -26,4 +26,8 @@
 	right: 50%;
 	margin-left: -50vw;
 	margin-right: -50vw;
-  }
+}
+
+@mixin borderRadius($radius: 0.25em) {
+	border-radius: $radius;
+}
