--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -46,6 +46,7 @@ h1 {
 	font-size: 2rem;
 	font-weight: 500;
 	font-family: 'Merriweather', serif;
+	margin-bottom: 0.5em;
 }
 
 h2 {
@@ -74,11 +75,10 @@ h6 {
 }
 
 p {
-	margin: 1em 0;
 	font-weight: 300;
 	line-height: 1.5;
 
 	&:not(:last-child) {
-		margin-bottom: 0;
+		margin-bottom: 1em;
 	}
 }
