--- a/src/styles/modules/header.module.scss
+++ b/src/styles/modules/header.module.scss
@@ -1,34 +1,70 @@
 @import '../configs/globals';
 
 .header {
-	> ul {
-		display: flex;
-		gap: 1em;
-		padding: 2em 0;
+	display: flex;
+	flex-direction: column;
 
-		> li {
-			> button {
-				cursor: pointer;
-				font-family: 'Cinzel Decorative', serif;
-				font-size: 1rem;
-				letter-spacing: 1px;
+	.banner {
+		background-color: $black;
+		color: $white;
+		padding: 1em 0;
 
-				&:hover,
-				&.active {
-					&:after {
-						opacity: 1;
+		@include fullWidth;
 
-						@include smoothTrans;
-					}
+		> div {
+			@include container;
+
+			display: flex;
+			justify-content: space-between;
+
+			> ul {
+				display: flex;
+				gap: 0.5em;
+
+				> li {
+					font-size: 1.25em;
 				}
+			}
+		}
+	}
 
-				&:after {
-					content: '';
-					display: block;
-					width: 100%;
-					height: 1px;
-					background-color: $gold;
-					opacity: 0;
+	.menu {
+		display: flex;
+		justify-content: space-between;
+
+		> ul {
+			display: flex;
+			gap: 1em;
+			padding: 2em 0;
+
+			> li {
+				> button {
+					cursor: pointer;
+					font-family: 'Cinzel Decorative', serif;
+					font-size: 1rem;
+					letter-spacing: 1px;
+
+					@include compact {
+						font-size: 0.9rem;
+					}
+
+					&:hover,
+					&.active {
+						&:after {
+							opacity: 1;
+
+							@include smoothTrans;
+						}
+					}
+
+					&:after {
+						content: '';
+						display: block;
+						width: 100%;
+						height: 1px;
+						background-color: $gold;
+						opacity: 0;
+					}
 				}
 			}
 		}
