looks perfect on mobile
ofc there are some big improvs to made

--- a/src/styles/modules/header.module.scss
+++ b/src/styles/modules/header.module.scss
@@ -17,9 +17,13 @@
 			display: flex;
 			justify-content: space-between;
 
+			span {
+				line-height: 1.6rem;
+			}
+
 			> ul {
 				display: flex;
-				gap: 0.5em;
+				gap: 0.75em;
 
 				> li {
 					font-size: 1.25em;
