--- a/src/styles/customs/_mixins.scss
+++ b/src/styles/customs/_mixins.scss
@@ -35,3 +35,15 @@
 @mixin borderRadius($radius: 0.25em) {
 	border-radius: $radius;
 }
+
+@mixin clamp($lines: 2) {
+	display: inline;
+	display: -webkit-box;
+	-webkit-line-clamp: $lines;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+}
+
+@mixin boxShadow {
+	box-shadow: 0 0 1em rgba(0, 0, 0, 0.1);
+}
