--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -6,6 +6,17 @@
 @import './configs/resets';
 @import './configs/globals';
 
+:root {
+	--swiper-theme-color: gold !important;
+	--swiper-theme-color-hover: #191919 !important;
+	--swiper-scrollbar-drag-bg-color: gold !important;
+	--swiper-pagination-color: gold !important;
+	--swiper-scrollbar-bg-color: #181a3730 !important;
+	--swiper-pagination-bullet-inactive-color: #fff !important;
+	--swiper-pagination-bullet-inactive-color-hover: gold !important;
+	--swiper-pagination-bullet-inactive-opacity: 0.125 !important;
+}
+
 .the-plan {
 	display: flex;
 	flex-direction: column;
@@ -56,8 +67,9 @@ h2 {
 }
 
 h3 {
+	font-family: 'Merriweather', serif;
 	font-size: 1.5rem;
-	font-weight: bold;
+	margin-bottom: 0.5em;
 }
 
 h4 {
@@ -82,4 +94,19 @@ p {
 	&:not(:last-child) {
 		margin-bottom: 1em;
 	}
+}
+
+.responsive-tag {
+	position: fixed;
+	top: 1%;
+	left: 50%;
+	transform: translateX(-50%);
+	padding: 0.25em 0.75em;
+	z-index: 1000;
+	font-weight: bold;
+	text-align: center;
+	background-color: $white;
+	opacity: 0.5;
+	color: $black;
+	outline: $black 1px solid;
 }
