--- a/src/styles/modules/infomatic.module.scss
+++ b/src/styles/modules/infomatic.module.scss
@@ -8,23 +8,27 @@
 	grid-template-columns: repeat(3, 1fr);
 	grid-gap: 1em;
 
-	@include phablet {
+	@include mobile {
 		grid-template-columns: repeat(2, 1fr);
 		width: 100%;
 	}
 
 	> div {
-		aspect-ratio: 1 / 1;
+		aspect-ratio: 1 / 0.75;
 		overflow: hidden;
 
 		@include borderRadius;
+
+		@include mobile {
+			aspect-ratio: 1 / 1;
+		}
 
 		&:not(:has(img)) {
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
 			padding: 1em;
-			border: $black solid 2px;
+			border: $black solid 1px;
 		}
 
 		p {
@@ -32,13 +36,11 @@
 		}
 
 		&:nth-child(3) {
-			// grid-column: 1 / 3;
 			background-color: $black;
 			color: $white;
 		}
 
 		&:nth-child(5) {
-			// grid-column: 1 / 3;
 			background-color: $gold;
 			color: $black;
 		}
