--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -73,8 +73,9 @@ h3 {
 }
 
 h4 {
-	font-size: 1.25rem;
-	font-weight: bold;
+	font-family: 'Merriweather', serif;
+	font-size: 1.125rem;
+	margin-bottom: 0.5em;
 }
 
 h5 {
