--- a/src/styles/modules/infomatic.module.scss
+++ b/src/styles/modules/infomatic.module.scss
@@ -5,44 +5,74 @@
 	margin: 0 auto;
 
 	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	grid-gap: 1em;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-areas: 'a b' 'd c' 'e f';
+	// grid-gap: 1em;
+
+	overflow: hidden;
+
+	@include borderRadius;
 
 	@include mobile {
-		grid-template-columns: repeat(2, 1fr);
+		grid-template-columns: 1fr;
+		grid-template-areas:
+			'a'
+			'b'
+			'c'
+			'd'
+			'e'
+			'f';
 		width: 100%;
 	}
 
 	> div {
-		aspect-ratio: 1 / 0.75;
+		aspect-ratio: 1 / 1;
 		overflow: hidden;
 
-		@include borderRadius;
+		// @include borderRadius;
 
-		@include mobile {
-			aspect-ratio: 1 / 1;
+		&:nth-child(1) {
+			grid-area: a;
+		}
+
+		&:nth-child(2) {
+			grid-area: b;
+		}
+
+		&:nth-child(3) {
+			grid-area: c;
+			background-color: $black;
+			color: $white;
+		}
+
+		&:nth-child(4) {
+			grid-area: d;
+		}
+
+		&:nth-child(5) {
+			grid-area: e;
+			background-color: $gold;
+			color: $black;
+		}
+
+		&:nth-child(6) {
+			grid-area: f;
 		}
 
 		&:not(:has(img)) {
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
-			padding: 1em;
-			border: $black solid 1px;
+			padding: 2em;
+			// border: $black solid 1px;
+
+			@include mobile {
+				aspect-ratio: auto;
+			}
 		}
 
 		p {
 			@include clamp(7);
-		}
-
-		&:nth-child(3) {
-			background-color: $black;
-			color: $white;
-		}
-
-		&:nth-child(5) {
-			background-color: $gold;
-			color: $black;
 		}
 
 		img {
@@ -51,7 +81,7 @@
 			object-fit: cover;
 			overflow: hidden;
 
-			@include borderRadius;
+			// @include borderRadius;
 			@include boxShadow;
 		}
 	}
