--- a/src/styles/modules/infomatic.module.scss
+++ b/src/styles/modules/infomatic.module.scss
@@ -33,6 +33,8 @@
 
 		&:nth-child(1) {
 			grid-area: a;
+			background: linear-gradient(145deg, $black, rgba($black, 0.9));
+			color: $white;
 		}
 
 		&:nth-child(2) {
@@ -41,8 +43,6 @@
 
 		&:nth-child(3) {
 			grid-area: c;
-			background-color: $black;
-			color: $white;
 		}
 
 		&:nth-child(4) {
@@ -51,7 +51,7 @@
 
 		&:nth-child(5) {
 			grid-area: e;
-			background-color: $gold;
+			background: linear-gradient(145deg, $gold, rgba($gold, 0.9));
 			color: $black;
 		}
 
@@ -64,7 +64,6 @@
 			flex-direction: column;
 			justify-content: center;
 			padding: 5em 2em;
-			// border: $black solid 1px;
 
 			@include phablet {
 				aspect-ratio: auto;
@@ -83,9 +82,7 @@
 			width: 100%;
 			height: 100%;
 			object-fit: cover;
-			overflow: hidden;
 
-			// @include borderRadius;
 			@include boxShadow;
 		}
 	}
