quick footer adjustments

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -79,8 +79,9 @@ h4 {
 }
 
 h5 {
-	font-size: 1rem;
-	font-weight: bold;
+	font-family: 'Merriweather', serif;
+	font-size: 0.875rem;
+	margin-bottom: 0.5em;
 }
 
 h6 {
