--- a/src/styles/modules/footer.module.scss
+++ b/src/styles/modules/footer.module.scss
@@ -1,16 +1,75 @@
 @import '../configs/globals';
 
 .footer {
-	background: $black;
+	background: linear-gradient(145deg, $black, rgba($black, 0.95));
 	color: $white;
 	min-height: 200px;
 
 	> div {
 		display: flex;
-		justify-content: center;
+		justify-content: space-evenly;
 		align-self: center;
+		gap: 2em;
 
 		@include container;
+
+		@include mobile {
+			flex-direction: column;
+			align-items: flex-start;
+			gap: 0;
+		}
+
+		> div {
+			padding: 2em 0;
+			display: flex;
+			flex-direction: column;
+			letter-spacing: 0.5px;
+
+			@include mobile {
+				width: 100%;
+			}
+
+			> h4 {
+				margin-bottom: 0.75em;
+			}
+
+			> h5 {
+				margin-bottom: 1em;
+				text-decoration: underline;
+				text-underline-offset: 3px;
+				text-decoration-color: $gold;
+			}
+
+			> ul.icons {
+				display: flex;
+				gap: 0.75em;
+				margin-bottom: 3em;
+
+				> li {
+					font-size: 1.25em;
+				}
+			}
+
+			> ul.contact {
+				display: flex;
+				flex-direction: column;
+
+				gap: 0.675em;
+
+				> li {
+					font-size: 0.875em;
+				}
+			}
+
+			span {
+				margin-top: auto;
+				font-size: 0.875em;
+
+				@include mobile {
+					margin-left: auto;
+				}
+			}
+		}
 	}
 
 	@include fullWidth;
