--- a/src/styles/modules/header.module.scss
+++ b/src/styles/modules/header.module.scss
@@ -5,7 +5,7 @@
 	flex-direction: column;
 
 	.banner {
-		background-color: $black;
+		background: linear-gradient(145deg, $black, rgba($black, 0.975));
 		color: $white;
 		padding: 1em 0;
 
