--- a/src/styles/modules/form.module.scss
+++ b/src/styles/modules/form.module.scss
@@ -5,6 +5,12 @@
 	flex-direction: column;
 	gap: 0.5em;
 	max-width: 500px;
+	color: $white;
+	padding: 1em 2.5em;
+
+	@include mobile {
+		padding: 1em;
+	}
 
 	label {
 		margin-top: 1em;
@@ -13,10 +19,11 @@
 	input,
 	textarea {
 		padding: 0.5em;
-		border: 2px solid rgba($black, 0.5);
+		border: 2px solid rgba($white, 0.5);
+		color: $white;
 
 		&:focus {
-			border-color: $black;
+			border-color: $white;
 		}
 
 		@include borderRadius;
@@ -32,12 +39,14 @@
 		padding: 0.5em 1em;
 		letter-spacing: 0.25px;
 		background-color: $black;
+		border: 2px solid $white;
 		color: $white;
 		align-self: flex-end;
 		cursor: pointer;
 
 		&:hover {
 			background-color: rgba($black, 0.95);
+			border-color: $gold;
 		}
 
 		@include borderRadius;
