--- a/src/styles/modules/form.module.scss
+++ b/src/styles/modules/form.module.scss
@@ -6,7 +6,7 @@
 	gap: 0.5em;
 	max-width: 500px;
 	color: $white;
-	padding: 1em 2.5em;
+	padding: 1em 2em;
 
 	@include mobile {
 		padding: 1em;
@@ -20,7 +20,8 @@
 	textarea {
 		padding: 0.5em;
 		border: 2px solid rgba($white, 0.5);
-		color: $white;
+		background-color: $white;
+		color: $black;
 
 		&:focus {
 			border-color: $white;
@@ -42,7 +43,10 @@
 		border: 2px solid $white;
 		color: $white;
 		align-self: flex-end;
+		text-transform: uppercase;
 		cursor: pointer;
+
+		@include smoothTrans;
 
 		&:hover {
 			background-color: rgba($black, 0.95);
