--- a/src/styles/modules/contact.module.scss
+++ b/src/styles/modules/contact.module.scss
@@ -4,6 +4,9 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	overflow: hidden;
+
+	max-height: 550px;
 
 	background: linear-gradient(145deg, $black, rgba($black, 0.95));
 
@@ -13,10 +16,6 @@
 		gap: 2.5em;
 		flex-direction: column;
 		align-items: flex-start;
-	}
-
-	> * {
-		flex: 1;
-		width: 100%;
+		max-height: 100%;
 	}
 }
