--- a/src/styles/modules/form.module.scss
+++ b/src/styles/modules/form.module.scss
@@ -5,14 +5,25 @@
 	flex-direction: column;
 	gap: 0.5em;
 	max-width: 500px;
+	min-width: 500px;
+
 	color: $white;
 	padding: 1em 2em;
+
+	@include laptop {
+		min-width: 315px;
+		padding: 1em 1.5em;
+	}
+
+	@include tablet {
+		min-width: 100%;
+	}
 
 	@include mobile {
 		padding: 1em;
 	}
 
-	label {
+	label:not(:first-of-type) {
 		margin-top: 1em;
 	}
 
